work on resume page

--- a/resume.html
+++ b/resume.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -82,78 +82,90 @@
 
   <main class="resume-main-wrapper">
 
-    <section class="resume-intro-wrapper fullpage-section flex align-center justify-center">
+    <div class="resume-intro-wrapper fullpage-section flex align-center justify-center">
       <div class="resume-watermark">
         <img src="img/resume-text-logo.svg" alt="resume watermark">
       </div>
       <div class="resume-case-study section-container flex space-between">
         <article class="intro-text flex justify-center">
           <h1>Tandem</h1>
-          <p><span>Y / </span>2016 <span>  TYPE / </span>Group Project   <span>SERVICES / </span>UI / Front end</p>->
+          <p><span>Y / </span>2016 <span>  TYPE / </span>Group Project   <span>SERVICES / </span>UI / Front end</p>
           <p class="resume-body-text">
             Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
           </p>
         </article> 
       </div> 
-    </section> <!-- .resume-intro-wrapper -->
+    </div> <!-- .resume-intro-wrapper -->
+    <div class="resume-body flex align-center">
+    <div class="section-container flex flex-wrap is-row space-between">
+      <section class="experience">
+        <h1>Work Experience</h1>
+        <article class="ex-sproutmedia">
+          <h3 class="year">2014 &ndash; PRESENT</h3>
+          <h4 class="work-placement"> Sproutmedia<span> | </span>www.sproutmedia.co.nz</h4>
+          <p class="work-title">Co-founder</p>
+          <p class="work-description">Sproutmedia is a video production company that I started in 2013 which focused on video production for small to medium size businesses. My role was producer, designer and bla</p>
+          <p class="work-responsibilities">Responsibilities</p>
+          <ul>
+            <li>Photography</li>
+            <li>Project management</li>
+            <li>Visual design</li>
+            <li>Videography</li>
+            <li>Post Production</li>
+          </ul>
+        </article>
+        <article class="ex-tbd">
+          <h3 class="year">2008 &ndash; 2014</h3>
+          <h4 class="work-placement">TBD Design<span> | </span>www.tbd.co.nz</h4>
+          <p class="work-title">Graphic Designer</p>
+          <p class="work-description">TBD Design is a multi-disciplined design and production company. Our experienced team develop a wide range of brand communications covering brand identity, promotional material, advertising, publication design, packaging and web marketing solutions.</p>
+          <p class="work-responsibilities">Responsibilities</p>
+          <ul>
+            <li>Branding, creative and corporate design</li>
+            <li>Annual reports, Corporate documents and publications)</li>
+            <li>Photo editing, retouching</li>
+            <li>Web/digital, user interface</li>
+            <li>Desktop publishing</li>
+            <!-- <li>Project management</li> -->
+            </ul>
+        </article> 
+        <article class="ex-capturegram">
+          <h3 class="year">2010 &ndash; PRESENT</h3>
+          <h4 class="work-placement">Capturegram Photograhy<span> | </span>www.capturegram.co.nz</h4>
+          <p class="work-title">Co-founder, Photographer</p>
+          <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
+          <p class="work-responsibilities">Responsibilities</p>
+          <ul>
+            <li>Branding, creative and corporate design</li>
+            <li>Annual reports, Corporate documents and publications)</li>
+            <li>Photo editing, retouching</li>
+            <li>Web/digital, user interface</li>
+            <li>Desktop publishing design</li>
+          </ul>
+        </article> 
+        <article class="ex-medivet">
+          <h3 class="year">2005 &ndash; 2006</h3>
+          <h4 class="work-placement">Medivet Animal Healthcare </h4>
+          <p class="work-title">Marketing Assistance</p>
+          <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
+          <p class="work-responsibilities">Responsibilities</p>
+          <ul>
+            <li>Organise market research</li>
+            <li>Produce reports, brochures and other marketing colateral</li>
+            <li>organise events and product seminars</li>
+          </ul>
+        </article> 
+      </section>
 
-    <div class="resume flex justify-center is-row">
-      <div class="resume-wrapper">
-        <div class="wrapper-container flex justify-center align-center flex-wrap ">
-          <section class="resume-body flex flex-wrap is-row space-between">
+      <section class="technical-skills">
+        <h1>Techical Skills</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi incidunt quibusdam, asperiores autem. Voluptatum enim velit vero reiciendis, ipsum incidunt voluptatibus. Dicta possimus quam numquam explicabo necessitatibus eaque porro.</p>
+      </section>
 
-            <div class="experience">
-              <h1>+ Work Experience</h1>
-              <article class="ex-sproutmedia">
-                <h4 class="work-placement"><span>2014 &ndash; PRESENT</span> | Sproutmedia | www.sproutmedia.co.nz</h4>
-                <p class="work-position">Co-founder</p>
-                <p class="work-description">Sproutmedia is a video production company that I started in 2013 which focused on video production for small to medium size businesses. My role was producer, designer and bla</p>
-                <p class="work-responsibilities">Responsibilities</p>
-                <ul>
-                  <li>Photography</li>
-                  <li>Project management</li>
-                  <li>Visual design</li>
-                  <li>Videography</li>
-                  <li>Post Production</li>
-                </ul>
-              </article>
-              <article class="ex-tbd">
-                <h4 class="work-placement"><span>2008 &ndash; 2014</span> | TBD Design | www.tbd.co.nz</h4>
-                <p class="work-position">Graphic Designer</p>
-                <p class="work-description">TBD Design is a multi-disciplined design and production company. Our experienced team develop a wide range of brand communications covering brand identity, promotional material, advertising, publication design, packaging and web marketing solutions.</p>
-                <p class="work-responsibilities">Responsibilities</p>
-                <ul>
-                  <li>Branding, creative and corporate design</li>
-                  <li>Annual reports, Corporate documents and publications)</li>
-                  <li>Photo editing, retouching</li>
-                  <li>Web/digital, user interface</li>
-                  <li>Desktop publishing</li>
-                  <!-- <li>Project management</li> -->
-                  </ul>
-              </article> 
-              <article class="ex-capturegram">
-                <h4 class="work-placement"><span>2010 &ndash; PRESENT</span> | Capturegram Photograhy | www.captyuregram.co.nz</h4>
-                <p class="work-position">Co-founder, Photographer</p>
-                <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
-                <p class="work-responsibilities">Responsibilities</p>
-                <ul>
-                  <li>Branding, creative and corporate design</li>
-                  <li>Annual reports, Corporate documents and publications)</li>
-                  <li>Photo editing, retouching</li>
-                  <li>Web/digital, user interface</li>
-                  <li>Desktop publishing design</li>
-                  </ul>
-              </article>  
-            </div>
-
-            <div class="technical-skills">
-              <h1>+ TECHNICAL SKILLS</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi incidunt quibusdam, asperiores autem. Voluptatum enim velit vero reiciendis, ipsum incidunt voluptatibus. Dicta possimus quam numquam explicabo necessitatibus eaque porro.</p>
-            </div>
-          </section>  
-        </div>
-      </div>
     </div>
+
+    </div>   
+
 
 
   </main> <!-- end of resume-main-wrapper -->
