add technical skills to resume.html

--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
       <section class="experience">
         <h1>Work Experience</h1>
         <article class="ex-sproutmedia">
-          <h3 class="year">2014 &ndash; PRESENT</h3>
+          <h3 class="year">2013 &ndash; PRESENT</h3>
           <h4 class="work-placement"> Sproutmedia<span> | </span>www.sproutmedia.co.nz</h4>
           <p class="work-title">Co-founder</p>
           <p class="work-description">Sproutmedia is a video production company that I started in 2013 which focused on video production for small to medium size businesses. My role was producer, designer and bla</p>
@@ -130,7 +130,7 @@
             </ul>
         </article> 
         <article class="ex-capturegram">
-          <h3 class="year">2010 &ndash; PRESENT</h3>
+          <h3 class="year">2010 &ndash; 2013</h3>
           <h4 class="work-placement">Capturegram Photograhy<span> | </span>www.capturegram.co.nz</h4>
           <p class="work-title">Co-founder, Photographer</p>
           <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
@@ -147,7 +147,7 @@
           <h3 class="year">2005 &ndash; 2006</h3>
           <h4 class="work-placement">Medivet Animal Healthcare </h4>
           <p class="work-title">Marketing Assistance</p>
-          <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
+          <p class="work-description">Medivet Group is a animal feed and nutrition company based on Cambodia. Medivet produces and distributes a range of high quality animal feed for swine, chicken, laying duck, and quail.</p>
           <p class="work-responsibilities">Responsibilities</p>
           <ul>
             <li>Organise market research</li>
@@ -159,12 +159,33 @@
 
       <section class="technical-skills">
         <h1>Techical Skills</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi incidunt quibusdam, asperiores autem. Voluptatum enim velit vero reiciendis, ipsum incidunt voluptatibus. Dicta possimus quam numquam explicabo necessitatibus eaque porro.</p>
+          <article class="skill">
+            <h3 class="skill-heading">DESIGN</h3>
+            <h4 class="skills-tech"> + Adobe Creative Suite </h4>           
+            <p>Photoshop, Lightroom, InDesign, Illustrator</p>
+            <h4 class="skills-tech"> + Sketch App</h4>
+          </article>
+          <article class="skill">
+            <h3 class="skill-heading">PROTOTYPING</h3>
+            <h4 class="skills-tech"> + Framer JS </h4>           
+            <h4 class="skills-tech"> + Sketch App</h4>
+            <h4 class="skills-tech"> + Pixate </h4>           
+            <h4 class="skills-tech"> + Invision</h4>
+            <h4 class="skills-tech"> + Atomic</h4>
+          </article>
+          <article class="skill">
+            <h3 class="skill-heading">WEB DEVELOPMENT</h3>
+            <h4 class="skills-tech"> + Github </h4> 
+            <h4 class="skills-tech"> + HTML and CSS </h4>          
+            <p>SASS, Flexbox, Bootstrap, Skeleton</p>
+            <h4 class="skills-tech"> + Javascript</h4>
+            <p>Node, Jquery, GreenSock</p>
+          </article>
       </section>
 
     </div>
 
-    </div>   
+    </div>  <!-- .resume-body -->  
 
 
 
