at content to resume page

--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
         </article> 
         <article class="ex-capturegram">
           <h3 class="year">2010 &ndash; 2013</h3>
-          <h4 class="work-placement">Capturegram Photograhy<span> | </span>www.capturegram.co.nz</h4>
+          <h4 class="work-placement">Capturegram<span> | </span>www.capturegram.co.nz</h4>
           <p class="work-title">Co-founder, Photographer</p>
           <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
           <p class="work-responsibilities">Responsibilities</p>
