refactor prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -82,18 +82,16 @@
 
   <main class="prototype-main-wrapper">
 
-    <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
+    <section class="prototype-intro-wrapper flex align-center justify-center">
       <div class="prototype-watermark">
         <img src="img/prototype-text-logo.svg" alt="background watermark">
       </div>
-      <div class="prototype-case-study section-container flex space-between">
-        <article class="intro-text flex justify-center">
+      <div class="prototype-case-study flex-container is-column-reverse space-between">
+        <article class="intro-text flex is-column justify-center col-two-thirds">
           <h1>Bird Nerd</h1>
-          <p><span>Y / </span>2016</p>
-          <p><span>TYPE / </span>Personal Project</p>
-          <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+          <h2>Case study and personal project, UX/Prototyping</h2>
           <p class="prototype-body-text">
-            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
+            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small..
           </p>
         </article>  
         <div class="welcome-iphone">
