continue refactor prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -100,8 +100,8 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process flex align-center">
-      <div class="process-container section-container flex is-row space-between align-center">
+    <section class="process align-center flex justify-center ">
+      <div class="process-container flex-container align-center">
         <article class="process-text">
           <h2>Process</h2>
           <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
