add to resume file

--- a/resume.html
+++ b/resume.html
@@ -180,6 +180,8 @@
             <p>SASS, Flexbox, Bootstrap, Skeleton</p>
             <h4 class="skills-tech"> + Javascript</h4>
             <p>Node, Jquery, GreenSock</p>
+            <h3 class="skill-heading">education</h3>
+            <h3 class="skill-heading">build tools browerify, gulp</h3>
           </article>
       </section>
 
