flexbox layout refactor prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -100,7 +100,7 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process align-center flex justify-center ">
+    <section class="process align-center flex justify-center">
       <div class="process-container flex-container align-center">
         <article class="process-text">
           <h2>Process</h2>
@@ -109,32 +109,32 @@
       </div>
     </section> <!-- .process -->
 
-    <section class="scope flex align-center">
-      <div class="scope-container section-container">
+    <section class="scope flex justify-center">
+      <div class="scope-container flex-container is-column">
         <article class="scope-text">
           <h2>Scoping</h2>
           <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
         </article>
         <article class="client-sketches flex is-row space-between">
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
+            <img src="img/assets/bird-nerd-1.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+            <img src="img/assets/bird-nerd-2.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
+            <img src="img/assets/bird-nerd-3.jpg" alt="Bird Nerd client sketches">
           </div>
           <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
+            <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
           <h5>(Early sketches provided by team at MPI)</h5> 
       </div>
     </section> <!-- .scope -->
 
-    <section class="wireframes flex align-center">
-      <div class="wireframes-container section-container">
+    <section class="wireframes flex">
+      <div class="wireframes-container flex-container is-column">
 
         <article class="wireframes-text">
           <h2>Wireframing</h2>
@@ -151,23 +151,23 @@
           </div>
         </div>
 
-        <div class="sketch-wireframes flex">
+        <div class="sketch-wireframes flex is-column">
           <article>
             <h3>Using Sketch app to produce higher fidelity</h3>
             <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
           </article>
-          <article class="flex is-row space-between">
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/landing.png" alt="fill this out">
+          <article class="wireframe-sketches flex is-row space-between">
+            <div>
+              <img src="img/assets/wireframe/landing.png" alt="fill this out">
             </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/welcome.png" alt="fill this out">
+            <div>
+              <img src="img/assets/wireframe/welcome.png" alt="fill this out">
             </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/signin.png" alt="fill this out">
+            <div>
+              <img src="img/assets/wireframe/signin.png" alt="fill this out">
             </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/signup.png" alt="fill this out">
+            <div>
+             <img src="img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
           <h6>(Wireframes done with sketch app)</h6> 
@@ -176,8 +176,8 @@
       </div> 
     </section> <!-- .wireframes -->
 
-    <section class="mockup flex align-center">
-      <div class="mockup-container section-container flex align-center space-between">
+    <section class="mockup flex">
+      <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
           <h2>Mockups and designs</h2>
           <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements. Talk about the process of going from a detailed design to a more minimal design.</p>
