fix flexbox mobile view

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       <div class="nav-content is-half">
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
-          <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
-          <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-          <li data-menuanchor="user-interface"><a href="#user-interface">user interface</a></li>
-          <li data-menuanchor="photography"><a href="#photography">photography</a></li>
-          <li data-menuanchor="resume"><a href="resume.html">resume</a></li>
+          <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
+          <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+          <li data-menuanchor="user-interface" class="menu-item"><a href="#user-interface">user interface</a></li>
+          <li data-menuanchor="photography" class="menu-item"><a href="#photography">photography</a></li>
+          <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
         </ul>
       </div>
 
@@ -114,7 +114,7 @@
     </div> <!-- .main-landing-page -->
 
     <div class="section about-me flex align-center">
-       <div class="wrapper-container flex align-center justify-center">
+       <div class="wrapper-container flex align-center is-column justify-center">
         <h1>Wellington based digital designer and front end developer</h1>
         <ul class="skills space-between">
           <li class="skill-item">design</li>
