--- a/prototype.html
+++ b/prototype.html
@@ -87,7 +87,7 @@
         <img src="img/prototype-text-logo.svg" alt="background watermark">
       </div>
       <div class="prototype-case-study flex-container is-column-reverse space-between">
-        <article class="intro-text flex is-column justify-center col-two-thirds">
+        <article class="intro-text flex is-column justify-center">
           <h1>Bird Nerd</h1>
           <h2>Case study and personal project, UX/Prototyping</h2>
           <p class="prototype-body-text">
