--- a/prototype.html
+++ b/prototype.html
@@ -190,13 +190,13 @@
       </div>    
     </section> <!-- .mockup -->
 
-    <section class="final-prototype flex align-center">
-      <div class="final-prototype-container section-container">
+    <section class="final-prototype flex">
+      <div class="final-prototype-container flex-container is-column">
         <article>
           <h2>Final Prototype</h2>
           <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
         </article>
-        <article class="final-prototype-screens flex is-row space-between">
+        <article class="final-prototype-screens flex space-between">
           <div>
           <img src="img/loading-iphone.png" alt="fill this out">
           </div>
@@ -213,16 +213,16 @@
       </div>
     </section> <!-- .final prototype -->
 
-    <section class="framer flex align-center justify-center">
-      <div class="framer-container section-container align-center flex">
-        <article class="framer-text">
+    <section class="framer flex">
+      <div class="framer-container flex-container align-center space-between is-column-reverse">
+        <article class="framer-text col-two-thirds">
           <h2>Interactive prototypes with Framer</h2>
           <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
           <h3>Iteration and experimentation</h3>
           <p>Talk about your decisions for using famer and what were the advantages. Also talk about other tools like proto, invision and UXpin</p>
           <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
-        <aside>
+        <aside class="framer-iphone">
           <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
         </aside>
       </div>    
