add screen shots of tandem app to user interface.html

--- a/user-interface.html
+++ b/user-interface.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -80,155 +80,56 @@
 
   </div> <!-- .main-header & navigation -->
 
-  <main class="ui-main-wrapper">
+  <main class="ui-main-wrapper align-center justify-center">
 
-    <section class="ui-intro-wrapper fullpage-section flex align-center justify-center">
+    <section class="ui-intro-wrapper flex align-center justify-center">
       <div class="ui-watermark">
         <img src="img/user-interface-text-logo.svg" alt="background watermark">
       </div>
-      <div class="ui-case-study section-container flex space-between">
-        <article class="intro-text flex justify-center">
+      <div class="ui-case-study flex-container is-column-reverse space-between">
+        <article class="intro-text flex is-column justify-center">
           <h1>Tandem</h1>
-          <p><span>Y / </span>2016 <span>  TYPE / </span>Group Project   <span>SERVICES / </span>UI / Front end</p>
-<!--           <p><span>TYPE / </span>Group Project</p>
-          <p><span>SERVICES / </span>UI / Front end</p> -->
+          <h2>Case study and group project</h2>
           <p class="ui-body-text">
-            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
+            Ride sharing app to connect travellers around New Zealand.
           </p>
-        </article>  
-        <div class="welcome-iphone">
-          <img src="img/tandem-landing.png" alt="welcome page of Bird Nerd app">
-        </div>
+        </article>
       </div> 
-    </section> <!-- .prototype-intro-wrapper -->
+    </section> <!-- .ui-main-wrapper -->
 
-    <section class="process flex align-center">
-      <div class="process-container section-container flex is-row space-between align-center">
-        <article class="process-text">
-          <h2>Process</h2>
-          <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
+
+
+
+
+
+    <section class="tandem-intro flex align-center">
+      <div class="tandem-intro-container flex-container is-row space-between align-center">
+        <article class="tandem-intro-text">
+          <h2>Connecting travellers around New Zealand</h2>
+          <p>For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects in which we can 6 days to complete. Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel. 
+
+          The app was built using Javascript, Node.js and PostgreSQL. My role was to design and front end. I produced wireframes, user-interface and coded most of the CSS. </p>
         </article>
       </div>
     </section> <!-- .process -->
 
-    <section class="scope flex align-center">
-      <div class="scope-container section-container">
-        <article class="scope-text">
-          <h2>Scoping</h2>
-          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+    <section class="tandem-final-design flex align-center">
+      <div class="final-design-container flex-container is-column">
+        <article class="final-text">
+          <h2>Final design</h2>
+          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their.</p>
         </article>
-        <article class="client-sketches flex is-row space-between">
-          <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
+        <article>
+          <div class="tandem-screen-img">
+            <img src="img/tandem-landing.png" alt="screen shot of tandem landing page">
           </div>
-          <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+          <div class="tandem-screen-img">
+            <img src="img/tandem-sign-in.png" alt="screen shot of tandem landing page">
           </div>
-          <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
-          </div>
-          <div class="client-sketch-item">
-            <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
-          </div>
-        </article>
-          <h5>(Early sketches provided by team at MPI)</h5> 
+        </article> 
       </div>
     </section> <!-- .scope -->
 
-    <section class="wireframes flex align-center">
-      <div class="wireframes-container section-container">
-
-        <article class="wireframes-text">
-          <h2>Wireframing</h2>
-          <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
-        </article>
-
-        <div class="pen-paper-wireframes">
-          <article>
-          <h3>Pen and paper</h3>
-          <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
-          </article>
-          <div>
-            <img src="img/wireframe-sketches.jpg" alt="fill this out">
-          </div>
-        </div>
-
-        <div class="sketch-wireframes flex">
-          <article>
-            <h3>Using Sketch app to produce higher fidelity</h3>
-            <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
-          </article>
-          <article class="flex is-row space-between">
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/landing.png" alt="fill this out">
-            </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/welcome.png" alt="fill this out">
-            </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/signin.png" alt="fill this out">
-            </div>
-            <div class="wireframe-item">
-            <img src="img/assets/wireframe/signup.png" alt="fill this out">
-            </div>
-          </article>
-          <h6>(Wireframes done with sketch app)</h6> 
-        </div>
-
-      </div> 
-    </section> <!-- .wireframes -->
-
-    <section class="mockup flex align-center">
-      <div class="mockup-container section-container flex align-center space-between">
-        <article class="mockup-text">
-          <h2>Mockups and designs</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements. Talk about the process of going from a detailed design to a more minimal design.</p>
-          <h3>Iteration and experimentation</h3>
-          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations. Talk about the lean agile etc...</p>
-        </article>
-        <aside class="mockup-screens">
-          <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
-        </aside>
-      </div>    
-    </section> <!-- .mockup -->
-
-    <section class="final-prototype flex align-center">
-      <div class="final-prototype-container section-container">
-        <article>
-          <h2>Final Prototype</h2>
-          <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
-        </article>
-        <article class="final-prototype-screens flex is-row space-between">
-          <div>
-          <img src="img/loading-iphone.png" alt="fill this out">
-          </div>
-          <div>
-          <img src="img/welcome-iphone.png" alt="fill this out">
-          </div>
-          <div>
-          <img src="img/signin-iphone.png" alt="fill this out">
-          </div>
-          <div>
-          <img src="img/signup-iphone.png" alt="fill this out">
-          </div>
-        </article>
-      </div>
-    </section> <!-- .final prototype -->
-
-    <section class="framer flex align-center justify-center">
-      <div class="framer-container section-container align-center flex">
-        <article class="framer-text">
-          <h2>Interactive prototypes with Framer</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-          <h3>Iteration and experimentation</h3>
-          <p>Talk about your decisions for using famer and what were the advantages. Also talk about other tools like proto, invision and UXpin</p>
-          <a href="prototype.html"><button class="btn">test prototype</button></a>
-        </article>
-        <aside>
-          <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
-        </aside>
-      </div>    
-    </section> <!-- .framer -->
 
     <footer class="footer">
       <div class="social-footer">
