--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-  <nav class="fp-nav-wrapper flex is-row justify-start">
+  <nav class="fp-nav-wrapper">
 
-    <div class="menu-container flex is-row">
+    <div class="menu-container">
 
-      <div class="nav-content is-half">
+      <div class="nav-content flex justify-end">
         <ul class="menu-list-items">
-          <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
+          <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
           <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="#user-interface">user interface</a></li>
           <li data-menuanchor="photography" class="menu-item"><a href="#photography">photography</a></li>
+          <li><a href="#photography">design</a></li>
           <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
         </ul>
       </div>
@@ -70,9 +71,9 @@
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
 
-      <aside class="nav-content-text flex is-half justify-center">
+<!--       <aside class="nav-content-text flex is-half justify-center">
         <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
-      </aside>
+      </aside> -->
 
       <div class="nav-back-button">
         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
