--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="#user-interface">user interface</a></li>
-          <li data-menuanchor="photography" class="menu-item"><a href="#photography">photography</a></li>
-          <li><a href="#photography">design</a></li>
+          <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
           <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
         </ul>
       </div>
