work on user-interface.html

--- a/user-interface.html
+++ b/user-interface.html
@@ -82,20 +82,23 @@
 
   <main class="ui-main-wrapper align-center justify-center">
 
-    <section class="ui-intro-wrapper flex align-center justify-center">
-      <div class="ui-watermark">
-        <img src="img/user-interface-text-logo.svg" alt="background watermark">
+  <section class="ui-intro-wrapper flex align-center justify-center">
+    <div class="ui-watermark">
+      <img src="img/user-interface-text-logo.svg" alt="background watermark">
+    </div>
+    <div class="ui-case-study flex-container is-column-reverse space-between">
+      <article class="intro-text flex is-column justify-center">
+      <h1>Tandem</h1>
+      <h2>Case study and Group project, UX/Prototyping</h2>
+      <p class="ui-body-text">
+      Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small..
+      </p>
+      </article>  
+      <div class="welcome-iphone">
+       <img src="img/tandem-iphone.png" alt="welcome page of Bird Nerd app">
       </div>
-      <div class="ui-case-study flex-container is-column-reverse space-between">
-        <article class="intro-text flex is-column justify-center">
-          <h1>Tandem</h1>
-          <h2>Case study and group project</h2>
-          <p class="ui-body-text">
-            Ride sharing app to connect travellers around New Zealand.
-          </p>
-        </article>
-      </div> 
-    </section> <!-- .ui-main-wrapper -->
+    </div> 
+  </section> <!-- .prototype-intro-wrapper -->
 
 
 
