fix full navigation index.html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -42,17 +42,16 @@
 
     <div class="navbar-toggle">
       <div class="hamburger-container">
-        <div class="menu-bar"></div>
-        <div class="menu-bar"></div>
-        <div class="menu-bar"></div>
+        <div class="menu-bar top"></div>
+        <div class="menu-bar middle"></div>
+        <div class="menu-bar bottom"></div>
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-  <nav class="fp-nav-wrapper">
+  <nav class="fp-nav-wrapper flex">
 
-    <div class="menu-container">
-
-      <div class="nav-content flex justify-end">
+    <div class="menu-container flex-container is-column">
+      <div class="nav-menu-content">
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
           <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
@@ -61,24 +60,27 @@
           <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
           <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
         </ul>
+
+        <div class="social-main-nav">
+          <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
       </div>
 
-    <div class="social-main">
-      <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-    </div>
+      <div class="nav-about-text">
+        <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+        <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
+      </div>
 
-<!--       <aside class="nav-content-text flex is-half justify-center">
-        <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
-      </aside> -->
+
 
       <div class="nav-back-button">
-        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+        <p>menu</p>
       </div>
 
-    </div>
+    </div> <!-- .menu-container -->
   </nav> <!-- .fp-nav-wrapper -->
 
     <div class="social-main">
