fix preloader timing

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
@@ -49,7 +49,6 @@
     </div> <!-- .navbar-toggle / hamburger menu -->
 
   <nav class="fp-nav-wrapper flex">
-
     <div class="menu-container flex-container is-column">
       <div class="nav-menu-content">
         <ul class="menu-list-items">
