--- a/prototype.html
+++ b/prototype.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
@@ -47,8 +47,40 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
   </div>  
+
+  <nav class="fp-nav-wrapper flex">
+    <div class="menu-container flex-container is-column">
+      <div class="nav-menu-content">
+        <ul class="menu-list-items">
+          <li data-menuanchor="home" class="active"><a href="./#home">home</a></li>
+          <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
+          <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+          <li data-menuanchor="user-interface" class="menu-item"><a href="#user-interface">user interface</a></li>
+          <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
+          <li data-menuanchor="resume" class="menu-item"><a href="./resume.html">resume</a></li>
+        </ul>
+
+        <div class="social-main-nav">
+          <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
+      </div>
+
+      <div class="nav-about-text">
+        <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+        <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
+      </div>
+
+      <div class="nav-back-button">
+        <p>menu</p>
+      </div>
+
+    </div> <!-- .menu-container -->
+  </nav> <!-- .fp-nav-wrapper -->
  
-    <nav class="fp-nav-wrapper flex is-row justify-start">
+<!--     <nav class="fp-nav-wrapper flex is-row justify-start">
       <div class="menu-container flex is-row">
         <div class="nav-content is-half">
           <ul class="menu-list-items">
@@ -76,9 +108,9 @@
       </div>
 
       </div>
-    </nav> <!-- .fp-nav-wrapper -->
+    </nav> .fp-nav-wrapper
 
-  </div> <!-- .main-header & navigation -->
+  </div> .main-header & navigation -->
 
   <main class="prototype-main-wrapper">
 
